Use DocumentContext in the pipeline to reduce memory usage